--- a/rapport/Project_report.tex
+++ b/rapport/Project_report.tex
@@ -50,7 +50,7 @@ Another challenge is the difficulty to create datasets. There are roughly two ty
 \subsection{Problem definition}
 \subsubsection{Signal processing : different transformations}
 \subsubsection{VGGish network}
-
+This section is devoted to briefly present a network created recently for multi-instrument recognition, called VGGish \cite{VGGish_net}. This name simply comes from the fact that it is derived from the classical VGG model \cite{vgg} used for image recognition. Amongst other changes, it has been modified to receive a Log-Mel Spectrogram as entry and the end of the network acts now as a compact embedding layer. A precise definition can be found \href{https://github.com/tensorflow/models/tree/master/research/audioset/vggish}{here}.
 \subsubsection{Training using OpenMIC}
 In this work we try to train a network on the OpenMIC dataset for multi-instrument recognition. 
 
