--- a/rapport/report.bib
+++ b/rapport/report.bib
@@ -88,3 +88,11 @@ month={09},
 doi = {hal-01864986}
 }
 
+
+@article{vgg,
+title={Very Deep Convolutional Networks for Large-Scale Image Recognition},
+author = {K. Simonyan, A. Zisserman},
+journal = {ArXiv},
+year={2014},
+month={September}
+}
