--- a/rapport/report.bib
+++ b/rapport/report.bib
@@ -96,3 +96,28 @@ journal = {ArXiv},
 year={2014},
 month={September}
 }
+@article{spectrogram,
+  author    = {Jordi Pons and
+               Olga Slizovskaia and
+               Rong Gong and
+               Emilia G{\'{o}}mez and
+               Xavier Serra},
+  title     = {Timbre Analysis of Music Audio Signals with Convolutional Neural Networks},
+  journal   = {CoRR},
+  volume    = {abs/1703.06697},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1703.06697},
+  archivePrefix = {arXiv},
+  eprint    = {1703.06697},
+  timestamp = {Mon, 13 Aug 2018 16:47:37 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/PonsSGGS17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{mel,
+title={A Scale for the Measurement of the Psychological Magnitude Pitch},
+author =  {S. S. Stevens, J. Volkmann, E. B. Newman},
+journal = {Acoust. Soc. Am.},
+volume = {8},
+year={1937}}
+
