--- a/rapport/report.bib
+++ b/rapport/report.bib
@@ -121,3 +121,21 @@ journal = {Acoust. Soc. Am.},
 volume = {8},
 year={1937}}
 
+@inproceedings{kong,
+author = {Kong, Qiuqiang and Xu, Yong and Plumbley, Mark},
+year = {2018},
+month = {04},
+pages = {},
+title = {Audio Set Classification with Attention Model: A Probabilistic Perspective},
+doi = {10.1109/ICASSP.2018.8461392}
+}
+
+@inproceedings{audioset,
+title	= {Audio Set: An ontology and human-labeled dataset for audio events},
+author	= {Jort F. Gemmeke and Daniel P. W. Ellis and Dylan Freedman and Aren Jansen and Wade Lawrence and R. Channing Moore and Manoj Plakal and Marvin Ritter},
+year	= {2017},
+booktitle	= {Proc. IEEE ICASSP 2017},
+address	= {New Orleans, LA}
+}
+
+
