--- a/rapport/report.bib
+++ b/rapport/report.bib
@@ -137,5 +137,14 @@ year	= {2017},
 booktitle	= {Proc. IEEE ICASSP 2017},
 address	= {New Orleans, LA}
 }
-
+@article{lstm,
+author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+year = {1997},
+month = {12},
+pages = {1735-80},
+title = {Long Short-term Memory},
+volume = {9},
+journal = {Neural computation},
+doi = {10.1162/neco.1997.9.8.1735}
+}
 
