f1 score, fin related work

--- a/rapport/report.bib
+++ b/rapport/report.bib
@@ -147,4 +147,21 @@ volume = {9},
 journal = {Neural computation},
 doi = {10.1162/neco.1997.9.8.1735}
 }
+@article{interpol,
+  author    = {Hongyi Zhang and
+               Moustapha Ciss{\'{e}} and
+               Yann N. Dauphin and
+               David Lopez{-}Paz},
+  title     = {mixup: Beyond Empirical Risk Minimization},
+  journal   = {CoRR},
+  volume    = {abs/1710.09412},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1710.09412},
+  archivePrefix = {arXiv},
+  eprint    = {1710.09412},
+  timestamp = {Mon, 13 Aug 2018 16:47:14 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1710-09412.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 
