--- a/rapport/Project_report.tex
+++ b/rapport/Project_report.tex
@@ -56,6 +56,14 @@ The first one is the genration of a Log-Mel Spectrogram. This is the result of a
 The second one is the AWT used to generate a scalogram. Given a signal $x(t)$ and a wavelet $\psi(t)$ satisfying $\psi(t)=0$ for $t<0$, a function acting as a filter on the signal, the AWT of the signal is $AWT_{\psi}(t,s)=(1/2\pi)\int_0^\infty \bar{\psi}(s\omega)x(\omega)e^{j\omega}d\omega$. This is a variant of the Continuous Wavelet Transform comonly used in signal processing. We proceed as for the spectrogram to get a visual representation of this transform, which is then called a scalogram.
 \subsubsection{VGGish network}
 This section is devoted to briefly present a network created recently for multi-instrument recognition, called VGGish \cite{VGGish_net}. This name simply comes from the fact that it is derived from the classical VGG model \cite{vgg} used for image recognition. Amongst other changes, it has been modified to receive a Log-Mel Spectrogram as entry and the end of the network acts now as a compact embedding layer. A precise definition can be found \href{https://github.com/tensorflow/models/tree/master/research/audioset/vggish}{here}.
+\subsubsection{F1-score}
+For instrument classification, the performances of an algorithm are generally not measured in terms of the usual accuracy. Indeed, as some instruments are easier than others to recognize, a difference of accuracy doesn't perfectly reflect an improvement in the classification of hard instruments. Therefore, another metric called the F1 score has been created specificaly for this purpose \cite{metric}. 
+
+We talk about true positive (TP) when both the network and the ground truth set the instrument as present in the audio. When the prediction is negative but should be positive, it is called a false negative (FN). There are similarly the false positive (FP) when the network predicts absence when it should not, and true negative when ground truth and network agree on the absence of the instrument. Then the precision (P) and recall (R) are introduced as :
+\[P = \frac{TP}{TP+FP}\]
+\[R=\frac{TP}{TP+FN}\]
+Finally the F1-score is calculated as :
+\[F1=\frac{2P\times R}{P+R}\]
 \subsubsection{Training using OpenMIC}
 In this work we try to train a network on the OpenMIC dataset for multi-instrument recognition. 
 
@@ -72,10 +80,23 @@ where $h(x)$ is the output of the embedding layer, $v$ is a vector to be learned
 \subsection{Using a BiLSTM architecture}
 In 2020, Amir Kenarsari-Anhari \cite{squelette_progr} built upon these works to improve the efficiency of the network introduced in the previous section. His idea was to use Recurrent Neural Networks (RNN) to better exploit the fact that the different vectors of features correspond to different seconds of the audio clip (as explained in the Section 1.2.1). In particular, he used a BiLSTM structure. An LSTM is a particular structure of RNN built especially to improve the ability of the network to pass information through time, which has proved its efficiency in Natural Language Processing or to study Time Series (see \cite{lstm} for a complete description). It is here set to be bidirectional in the sense that it treats the data by following the its direction as well as reversing it.
 
-The complete architecture, presented in figure \ref{mel}, improved the efficiency of the model and will be considered as the state of the art for us. 
+Practically, the BiLSTM replaced the embedding and prediction layers used by Gurarani \etal to be coupled with the attention mechanism. The resulting architecture, presented in figure \ref{mel}, improved the efficiency of the model and will be considered as the state of the art for us. 
 \subsection{Using scalograms}
+In 2020, a paper from Dutta \etal \cite{features_descr} investigated the use of scalograms based on AWT using a Morse wavelet to replace the spectrograms, for \textit{single}-instrument recognition. The problem of the spectrograms using STFT is that as the signal is cut in pieces before processing each part independently, it is harder to get back the unity of the signal. That is a particular issue in our case as we do not have the onset and offset times of the instruments. This means that some pieces of the signal (after cutting) are treated as if they were containing an instrument while they may not. This procedure also significantly looses efficiency when the signal contains very low or very high frequencies. 
+
+On the contrary, the AWT is computed over the whole signal. Therefore is supposed to be able to extract features taking into account the entire audio clip, which should thus be better.
+
+The generated scalograms have been given to a CNN to extract the extract the features, ending with a classification layer. Used to distinguish 14 different instruments, the model achieved a reasonnable accuracy and is to be followed by further works on the topic.
 \subsection{Data augmentation}
+As told before, a big issue in MIR can be the absence of a big dataset corresponding to a given task. Naturally researchers have been working on different data augmentation techniques, general or specified for a task. We can cite Schütler and Grill \cite{data_aug} who proposed to randomly add a Gaussian noise to slightly modify the data. 
+
+Zhang \etal \cite{interpol} experimented interpolation between different samples. More precisely, given $\lambda\in[0,1]$ and two signals x and y, labeled by $l_x$ and $l_y$, we create a new signal $z$ with the label $l_z$ by computing :
+\[z = \lambda x+(1-\lambda)y\]
+\[l_z = \lambda l_x+(1-\lambda)l_y\]
 \section{Methodology}
+\subsection{BiLSTM}
+\subsection{Spectorgrams}
+\subsection{Data augmentation}
 \begin{figure}
 	\centering
 	\includegraphics[scale = 0.45]{bilstm.png}
@@ -94,31 +115,32 @@ The complete architecture, presented in figure \ref{mel}, improved the efficienc
 	\caption{Convolutional network taking scalograms, reduced structure}
 	\label{reduit}
 \end{figure}
-\section{Motivation and problem definition}
-\subsection{Our problem}
-
-Given an audio clip and a list of instruments, we aim to determine, for each instrument, if it is played during the audio or not. Our goal is to train a neural network to achieve this task, using the OpenMIC dataset. The underlying goal of using this dataset is to try to find out how to exploit weakly and partially labeled data. 
-
-Recently Amir Kenarsari-Anhari \cite{squelette_progr} got great results training a network on OpenMIC for this purpose. His paper will be the basis of our work, in the sense that we will try to improve his algorithm, as we will discuss in the next section.
-\section{Methodology}
-\subsection{Squeletton of the algorithm}
-Let's briefly describe the algorithm of \cite{squelette_progr}. Given an audio clip, we compute its log mel-spectrogram, which consists in a transformation of the signal (in the same sense than a Fourier transform). This is then given to a Convolutional Neural Network (CNN). Its structure is close to the one of the VGG network used in image recognition, reason why it will be referred as the VGGish layer \cite{VGGish_net}. The next step is to use an attention layer which consists in learning signifiant segments in the clip, see \cite{attention}. This ends with a classification layer.
-
-Our work will follow the structure of this model. Our goal will be to modify some of these blocks to try to improve the performances of the algorithm.
-\subsection{Changing the feature learning}
-As we discussed, multi-instrument classification and single-instrument classification are pretty different fields. However they both have to deal with the pre processing of the signal. This summer Dutta \etal \cite{features_descr} experimented a scalogram different from the mel-scalogram to train a network on single-instrument classification. The idea of their technique is to use features computed on the whole signal while other methods subdivise the signal before processing each part. As they achieved greater results than previous works, our idea would be to try to use this scalogram for our model to get maybe more representative features which would hopefully result in a better training. 
-
-Another modification indirectly suggested by this paper would be to even change the VGGish layer and use the one of Dutta \etal. This would allow us to try different CNN for this part of the algorithm.
-
-We also note that Dutta \etal trained only on 14 instruments (compared to 20 in OpenMIC). Experimenting it on our algortihm will so be a double test, trying not only a different task but also different instruments.
-\subsection{Data augmentation}
-As Amir Kenarsari-Anhari suggested at the end of his paper, another direction of research to improve his model is to experiment more data augmentation. Our primary goal will be to experiment on changing the feature learning process, but if possible we plan to try to add different data augmentation techniques, as it is a natural way to try to deal with the small size of the dataset. 
-
-A starting point may be a paper from Schlüter and Grill \cite{data_aug} using data augmentation for singing voice detection. Even if voice detection is quite different from instrument classification, this paper presents data augmentation techniques which are a bit more general than just voice detection. Moeover we can also try to take some of the techniques specific to voice detection and to adapt them to our problem, potentially leading to new techniques.
+\begin{figure}
+	\centering
+	\includegraphics[scale = 0.5]{to_ref.png}
+	\caption{Comparison of the instrument-level F1-score between our different Mel architectures and state of the art (denoted by \textit{reference}), with no data augmentation.}
+	\label{to_ref}
+\end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[scale = 0.5]{cnn_plot.png}
+	\caption{Comparison of the instrument-level F1-score between our Mel 1-layer architecture and our CNN and CNN-reduced architectures, with no data augmentation.}
+	\label{cnn_plot}
+\end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[scale = 0.5]{mel_data.png}
+	\caption{Comparison of the instrument-level F1-score between our different data augmentation strategies for the 1-layer Mel structure.}
+	\label{mel_data}
+\end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[scale = 0.5]{cnn_data.png}
+	\caption{Comparison of the instrument-level F1-score between our different data augmentation strategies for the CNN structure.}
+	\label{cnn_data}
+\end{figure}
 \section{Evaluation}
-We will first try to implement the changes discussed in 2.2., namely changing the scalogram and the VGGish layer. If it's possible, we will then explore some data augmentation techniques. We will experiment different combinations of our changes and compare them at first to the results of \cite{squelette_progr} to see if we are able to achieve a better performance. We will also make comparisons between them to try to find out the most effective one(s) and try to deduce some interpretation of why some are better than the others. As our purpose is to improve the algorithm of \cite{squelette_progr}, it will constitute our benchmark, meaning that we will focus on comparing our best results with theirs. 
 
-We precise that the performances of an algorithm are not measured in terms of the usual accuracy in the field of instrument classification. Indeed, as some instruments are easier than others to recognize, a difference of accuracy doesn't perfectly reflect an improvement in the classification of hard instruments. Therefore we will use the F1 score which is a metric created specificaly for this purpose. Details can be found in \cite{metric}. In order to produce a meaningful comparison, we will more precisely use the parameters that are described in \cite{squelette_progr}.
 {\small
 	\bibliographystyle{ieee_fullname}
 	\bibliography{report}
